--- a/.gitmodules
+++ b/.gitmodules
@@ -1,23 +1,19 @@
 [submodule "prebuilts"]
 	path = prebuilts
-	url = https://git.trustedfirmware.org/hafnium/prebuilts
+    url = git@github.com:GeorgeZhouWork/hafnium_prebuilts.git
 	shallow = true
 [submodule "driver/linux"]
 	path = driver/linux
-	url = https://git.trustedfirmware.org/hafnium/driver/linux
+    url = git@github.com:GeorgeZhouWork/hafnium_driver.git
 [submodule "project/reference"]
 	path = project/reference
-	url = https://git.trustedfirmware.org/hafnium/project/reference
-	shallow = true
+    url = git@github.com:GeorgeZhouWork/hafnium_reference.git
 [submodule "third_party/dtc"]
 	path = third_party/dtc
-	url = https://git.trustedfirmware.org/hafnium/third_party/dtc
-	shallow = true
+    url = git@github.com:GeorgeZhouWork/hafnium_dtc.git
 [submodule "third_party/googletest"]
 	path = third_party/googletest
-	url = https://git.trustedfirmware.org/hafnium/third_party/googletest
-	shallow = true
+    url = git@github.com:GeorgeZhouWork/hafnium_googletest.git
 [submodule "third_party/linux"]
 	path = third_party/linux
-	url = https://git.trustedfirmware.org/hafnium/third_party/linux
-	shallow = true
+    url = git@github.com:GeorgeZhouWork/hafnium_linux.git
