--- a/example/fvp-base-gicv3-psci-1t.dts
+++ b/example/fvp-base-gicv3-psci-1t.dts
@@ -493,7 +493,7 @@
 
 / {
     chosen {
-        bootargs = "";
+        bootargs = "earlycon=pl011,mmio32,0x1c090000";
         stdout-path = "serial0:115200n8";
         linux,initrd-start = <0x84000000>;
         linux,initrd-end = <0x90000000>;
