--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 out/
 .repo/
+images/*
+cscope*
+.*
 
 # Ignore project/ subfolders which are not part of the public Hafnium tree.
 # When these are checked out using a `repo` manifest Git otherwise treats them
