--- a/example/guest1.dts
+++ b/example/guest1.dts
@@ -9,8 +9,10 @@
 	#size-cells = <0x2>;
 
 	chosen {
-        bootargs = "console=ttyAMA1,115200 earlycon=pl011,mmio32,0x1c0a0000";
-        stdout-path = "serial1:115200n8";
+        bootargs = "console=ttyAMA0,115200 earlycon=pl011,mmio32,0x1c090000";
+        stdout-path = "serial0:115200n8";
+        linux,initrd-start = <0xfe800000>;
+        linux,initrd-end = <0xFEF00000>;
 	};
 
 	aliases {
