--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 out/
 .repo/
+images/
+.cproject
+.project
+.settings/
+cscope*
+nohup*
 
 # Ignore project/ subfolders which are not part of the public Hafnium tree.
 # When these are checked out using a `repo` manifest Git otherwise treats them
