--- a/example/fvp-base-gicv3-psci-1t.dts
+++ b/example/fvp-base-gicv3-psci-1t.dts
@@ -483,8 +483,7 @@
 
 / {
     chosen {
-        bootargs = "earlycon=pl011,mmio32,0x1c0a0000 maxcpus=4";
-        stdout-path = "serial0:115200n8";
+        bootargs = "earlycon=pl011,mmio32,0x1c0a0000 maxcpus=4 console=ttyAMA0,115200 loglevel=8";
         linux,initrd-start = <0x84000000>;
         linux,initrd-end = <0x90000000>;
     };
