--- a/src/drivers/BUILD.gn
+++ b/src/drivers/BUILD.gn
@@ -4,14 +4,33 @@
 # license that can be found in the LICENSE file or at
 # https://opensource.org/licenses/BSD-3-Clause.
 
-source_set("gicv3") {
+source_set("gic") {
     sources = [
-        "gic/gicv3.c",
-        "gic/vgicv3.c",
+        "gic/vgic.c",
     ]
     deps = [
-        ":vdev",
+        ":gicv2",
     ]
+}
+
+#source_set("gicv3") {
+#        sources = [
+#            "gic/gicv3.c",
+#            "gic/vgicv3.c",
+#        ]
+#        deps = [
+#            ":vdev",
+#        ]
+#}
+
+source_set("gicv2") {
+        sources = [
+            "gic/gicv2.c",
+            "gic/vgicv2.c",
+        ]
+        deps = [
+            ":vdev",
+        ]
 }
 
 source_set("vdev") {
