--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -17,7 +17,7 @@ hypervisor("hafnium") {
   deps = [
     ":layout",
     ":src_not_testable_yet",
-    "//src/drivers:vdev",
+    "//src/drivers:gic",
   ]
 }
 
