--- a/example/fvp-base-gicv2-psci.dts
+++ b/example/fvp-base-gicv2-psci.dts
@@ -484,8 +484,8 @@
 };
 / {
     chosen {
-        bootargs = "earlycon=pl011,mmio32,0x1c090000 maxcpus=4 console=ttyAMA0,115200 loglevel=8";
+        bootargs = "earlycon=pl011,mmio32,0x1c0a0000 maxcpus=8 console=ttyAMA1,115200 loglevel=6";
         linux,initrd-start = <0x84000000>;
-        linux,initrd-end = <0x90000000>;
+        linux,initrd-end = <0x88000000>;
     };
 };
