--- a/example/manifest.dts
+++ b/example/manifest.dts
@@ -11,6 +11,7 @@
 			ramdisk_filename = "initrd.img";
 			smc_whitelist_permissive;
 			vcpu_count = <0x04>;
+            interrupts = <0x19 0x1d 0x1e 0x1b 0x1a 0x3a 0x5c 0x5d 0x5e 0x5f 0x2f 0x2b 0x29 0x2a 0x2c 0x2d 0x25 0x26 0x27 0x28 0x20 0x22 0x23 0x24 0x2e 0x4a>;
 		};
 	};
 };
