--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -17,6 +17,7 @@ hypervisor("hafnium") {
   deps = [
     ":layout",
     ":src_not_testable_yet",
+    "//src/drivers:gic",
   ]
 }
 
@@ -100,6 +101,7 @@ source_set("vm") {
 source_set("std") {
   sources = [
     "std.c",
+    "crc.c"
   ]
 
   deps = [
